--- a/contact.css
+++ b/contact.css
@@ -63,6 +63,7 @@ body{
     color: var(--color-3);
     font-size: var(--step-1);
     letter-spacing: 1.1px;
+
 }
 .box span{
     margin-top: 1vh;
@@ -72,6 +73,10 @@ body{
     color: var(--color-3);
     font-size: var(--step--1);
     letter-spacing: 1.1px;
+    text-decoration: none;
+}
+.box a{
+    text-decoration: none;
 }
 @media(min-width:510px){
  .info{
@@ -117,6 +122,9 @@ body{
 }
 .footer .rights{
     font-size: var(--step--1);
+}
+.footer a{
+    text-decoration: none;
 }
 .footer p a{
     text-decoration: none;
